[gd_scene format=3 uid="uid://btcwfmryqcrp0"]

[ext_resource type="Texture2D" uid="uid://cxfs8quiptj7b" path="res://assets/map/win_cylinder/front_win_cylinder.png" id="1_me5no"]
[ext_resource type="Script" path="res://src/map/win_cylinder/win_cylinder.gd" id="1_nl78x"]
[ext_resource type="Texture2D" uid="uid://cwtfm50rgcdcs" path="res://assets/map/win_cylinder/back_win_cylinder.png" id="2_nl78x"]
[ext_resource type="Texture2D" uid="uid://075kmh7unm0c" path="res://assets/player/player.png" id="4_j1f6g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_me5no"]
size = Vector2(20, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nl78x"]
size = Vector2(11, 26)

[sub_resource type="Animation" id="Animation_j2hf6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j1f6g"]
resource_name = "player_enter"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerShape/PlayerSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-11.000001, 0), Vector2(9, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerShape/PlayerSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j2hf6"]
_data = {
&"RESET": SubResource("Animation_j2hf6"),
&"player_enter": SubResource("Animation_j1f6g")
}

[node name="WinCylinder" type="StaticBody2D" unique_id=2074845977]
script = ExtResource("1_nl78x")
time_after_enter = 0.25

[node name="Shape" type="Node2D" parent="." unique_id=1622506930]

[node name="FrontSprite" type="Sprite2D" parent="Shape" unique_id=410976158]
z_index = 2
texture = ExtResource("1_me5no")

[node name="BackSprite" type="Sprite2D" parent="Shape" unique_id=1107657243]
z_index = -1
position = Vector2(-9, 0)
texture = ExtResource("2_nl78x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=310245811]
position = Vector2(0, -14.5)
shape = SubResource("RectangleShape2D_me5no")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." unique_id=1010758332]
position = Vector2(0, 14.5)
shape = SubResource("RectangleShape2D_me5no")

[node name="DetectPlayerArea" type="Area2D" parent="." unique_id=1210665766]
position = Vector2(1, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayerArea" unique_id=349993699]
shape = SubResource("RectangleShape2D_nl78x")

[node name="PlayerShape" type="Node2D" parent="." unique_id=1657807900]
z_index = -1

[node name="PlayerSprite" type="Sprite2D" parent="PlayerShape" unique_id=1312754710]
visible = false
position = Vector2(-11.000001, 0)
rotation = 0.7853982
scale = Vector2(0.99999994, 0.99999994)
texture = ExtResource("4_j1f6g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=452286385]
libraries/ = SubResource("AnimationLibrary_j2hf6")

[connection signal="body_entered" from="DetectPlayerArea" to="." method="_on_detect_player_area_body_entered"]
